--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ace-builds": "^1.4.12",
+    "markdown-to-jsx": "^7.0.0",
     "react": "^16.13.1",
+    "react-ace": "^9.1.4",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "electron": "^10.1.2"
